Assignment6/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/exoalexander/Documents/GitHub/Java11Skeleton/Assignment6
-d
/Users/exoalexander/Documents/GitHub/Java11Skeleton/Assignment6/doc
-encoding
windows-1252
-charset
windows-1252
/Users/exoalexander/Documents/GitHub/Java11Skeleton/Assignment6/main.java
<---- end of javadoc command ---->
Loading source file /Users/exoalexander/Documents/GitHub/Java11Skeleton/Assignment6/main.java...
/Users/exoalexander/Documents/GitHub/Java11Skeleton/Assignment6/main.java:5: error: <identifier> expected
    System.out.println("Hello Argon City!");
                      ^
/Users/exoalexander/Documents/GitHub/Java11Skeleton/Assignment6/main.java:5: error: illegal start of type
    System.out.println("Hello Argon City!");
                       ^
2 errors
